tests/matrices/invalid/invalid_bad_field.mtx
%%MatrixMarket matrix coordinate ____ general
% invalid field type
4 4 0
